Updated email address

--- a/_back-end/_components/footer.njk
+++ b/_back-end/_components/footer.njk
@@ -13,7 +13,7 @@
         <p class="rs-mbs-0">
           <a class="rs-link-button" href="contact/">Say hello!</a>
         </p>
-        <p>Let's discuss your project. Use my <a href="contact/">contact form</a> or email: <code>patrick@risingsky.co.uk</code>. Even if I can't help directly, I'm always happy to give advice on the best place to look for help.</p>
+        <p>Let's discuss your project. Use my <a href="contact/">contact form</a> or email: <code>hi@risingsky.co.uk</code>. Even if I can't help directly, I'm always happy to give advice on the best place to look for help.</p>
       {% endif %}
     </div>
   </div>
