--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -68,10 +68,10 @@ eleventyNavigation:
               (max-width: 30em) 20em">
         </div>
 
-        <p class="rs-colour-instruction">Unfortunately, the club let a payment lapse by mistake so the site is down. It should be up again soon.</p>
+        <p class="rs-colour-instruction">Unfortunately, due to an admin issue,  the site is currently down so I have linked to a backup site until resolved.</p>
 
 
-        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. <a href="https://mid-argyll-rfc.com" target="_blank">I built their website</a> for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
+        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. <a href="https://marfc.netlify.app/" target="_blank">I built their website</a> for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
       </div>
 
       <div class="rs-sidebar">
