--- a/website-source/contact/index.njk
+++ b/website-source/contact/index.njk
@@ -11,7 +11,7 @@ eleventyNavigation:
 
 <p>I'm always delighted to hear from new people with projects of any size. </p>
 
-<p>If you think I can help, send me an email to <code>patrick@risingsky.co.uk</code> or use the form below to send me a message. It's helpful to describe what the project is about and any other aspects like deadlines and budget.</p>
+<p>If you think I can help, send me an email to <code>hi@risingsky.co.uk</code> or use the form below to send me a message. It's helpful to describe what the project is about and any other aspects like deadlines and budget.</p>
 
 <form action="#" method="POST" class="rs-form-contact">
   <div>
