--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -27,15 +27,7 @@ eleventyNavigation:
 
         <h2>Example projects</h2>
 
-        <h3 id="elearning" class="rs-colour-text-highlight-shade">E&#8209;LEARNING: UAS A1+A3 &amp; UAS A2</h3>
-
-        <div class="rs-column-main-breakout rs-image-effect">
-          <img class="rs-project-example-hero" src="_shared/images/uas-a2-hero.png" alt="A screenshot of the welcome page for the UAS A2 course." sizes="(max-width: 600px) 600px, ((min-width: 601px) and (max-width: 999px)) 1000px">
-        </div>
-
-        <p>Flying a drone in Europe now requires pilots to take an online training course then pass a theoretical exam. A partnership between the <a href="https://dac.gouvernement.lu/" target="_blank">Direction de l'Aviation Civile of Luxembourg</a> (DAC) and the <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> engaged me to work with their teams to storyboard, design and build a pair of multilingual courses to meet this requirement.</p>
-
-        <p>Both courses were a <strong>huge success</strong>, consistently delivering the <strong>highest learner numbers</strong> across the platform. By registering with the <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Learning Zone</a>, you can view the <a href="https://learningzone.eurocontrol.int/ilp/pages/catalogsearch.jsf?catalogId=1700&menuId=1108&locale=en-GB&showbundlekeys=false&sidebarExpanded=true&q=%7B!q.op%3DAND%7D%20UAS-OPEN-A1%2BA3&rows=1" target="_blank">UAS A1+A3</a> and <a href="https://learningzone.eurocontrol.int/ilp/pages/catalogsearch.jsf?catalogId=1700&menuId=1108&locale=en-GB&showbundlekeys=false&sidebarExpanded=true&q=%7B!q.op%3DAND%7D%20UAS-OPEN-A2-COURSE&rows=1" target="_blank">UAS A2 Open</a> courses for free.</p>
+        
 
         <h3 id="imc" class="rs-colour-text-highlight-shade">IMC LMS CUSTOMISATION: KPI panel</h3>
 
@@ -45,14 +37,25 @@ eleventyNavigation:
 
         <p class="rs-colour-instruction">Select the image above to view  a video of the animations.</p>
 
-        <p>The <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> wanted to promote their Learning Zone KPI statistics showing how popular the platform is. The <strong>responsive dashboard panel</strong> I built into the Learning Zone home page received loads of positive feedback for being both eye&#8209;catching and functional!</p>
+        <p>The <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">learning centre</a> at <a href="https://www.eurocontrol.int/" target="_blank">a major European organisation</a> wanted to promote their Learning Zone KPI statistics showing how popular the platform is. The <strong>responsive dashboard panel</strong> I built into the Learning Zone home page received loads of positive feedback for being both eye&#8209;catching and functional!</p>
+
+        <h3 id="elearning" class="rs-colour-text-highlight-shade">E&#8209;LEARNING: UAS A1+A3 &amp; UAS A2</h3>
+
+        <div class="rs-column-main-breakout rs-image-effect">
+          <img class="rs-project-example-hero" src="_shared/images/uas-a2-hero.png" alt="A screenshot of the welcome page for the UAS A2 course." sizes="(max-width: 600px) 600px, ((min-width: 601px) and (max-width: 999px)) 1000px">
+        </div>
+
+        <p>Flying a drone in Europe now requires pilots to take an online training course then pass a theoretical exam. 
+          I was tasked by a European <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">learning centre</a> to work with their teams to storyboard, design and build a pair of multilingual courses to meet this requirement.</p>
+
+        <p>Both courses were a <strong>huge success</strong>, consistently delivering the <strong>highest learner numbers</strong> across the platform. By registering with the <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Learning Zone</a>, you can view the <a href="https://learningzone.eurocontrol.int/ilp/pages/catalogsearch.jsf?catalogId=1700&menuId=1108&locale=en-GB&showbundlekeys=false&sidebarExpanded=true&q=%7B!q.op%3DAND%7D%20UAS-OPEN-A1%2BA3&rows=1" target="_blank">UAS A1+A3</a> and <a href="https://learningzone.eurocontrol.int/ilp/pages/catalogsearch.jsf?catalogId=1700&menuId=1108&locale=en-GB&showbundlekeys=false&sidebarExpanded=true&q=%7B!q.op%3DAND%7D%20UAS-OPEN-A2-COURSE&rows=1" target="_blank">UAS A2 Open</a> courses for free.</p>
 
         <h3 id="ui" class="rs-colour-text-highlight-shade">UI &amp; APLICATIONS: ACE</h3>
         <div class="rs-column-main-breakout rs-image-effect">
           <img class="rs-project-example-hero" src="_shared/images/lz-ace.png" alt="A complex User Interface for the ACE application built using web components and vanilla JavaScript." sizes="(max-width: 600px) 600px, ((min-width: 601px) and (max-width: 999px)) 1000px">
         </div>
 
-        <p>The training staff at <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> were using several outdated applications and reports to manage courses. I was tasked with building a single integrated application front end to modernise and bring all the tools together. After conducting <strong>requirement interviews</strong> and <strong>prototype workshops</strong>, the resulting application has simplified the workflow for all training staff. It only uses <strong>vanilla JavaScript</strong>, resulting in a low maintenance tool!</p>
+        <p>I was engaged in 2024 to combine several legacy tools into a single integrated and modernised application front end. After conducting <strong>requirement interviews</strong> and <strong>prototype workshops</strong>, the resulting application has simplified the workflow for all training staff. It only uses <strong>vanilla JavaScript</strong> and web components, resulting in a low maintenance tool!</p>
 
         <h3 id="websites" class="rs-colour-text-highlight-shade">WEBSITES: Mid-Argyll Rugby Football Club</h3>
 
