Added a bloomin ballooon

--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -97,6 +97,7 @@ jsFiles: []
             <header>
 
                 <div class="rs-logo-container">
+                    {% include "../../website-source/_shared/images/balloon.svg" %}
                     <a href="/" class="rs-logo">
                         <span class="visually-hidden">Go to the home page.</span>{% include "../../website-source/_shared/images/logo/rising-sky-logo.svg" %}</a>
                         <button class="rs-animation-cloud-control" data-playing>
