--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -55,7 +55,7 @@ eleventyNavigation:
           <img class="rs-project-example-hero" src="_shared/images/lz-ace.png" alt="A complex User Interface for the ACE application built using web components and vanilla JavaScript." sizes="(max-width: 600px) 600px, ((min-width: 601px) and (max-width: 999px)) 1000px">
         </div>
 
-        <p>The training staff at <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> were using several outdated applications and reports to manage courses. I was tasked with building a single integrated application front end to modernise and bring all the tools together. After conducting <strong>requirement interviews</strong> and <strong>prototype workshops</strong>, the resulting application has simplified the workflow for all training staff. It only uses <strong>vanilla JavaScript</strong> and web components, resulting in a low maintenance tool!</p>
+        <p>The training staff at <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> were using several outdated applications and reports to manage courses. I was engaged to build a single integrated application front end to modernise and bring all the tools together. After conducting <strong>requirement interviews</strong> and <strong>prototype workshops</strong>, the resulting application has simplified the workflow for all training staff. It only uses <strong>vanilla JavaScript</strong> and web components, resulting in a low maintenance tool!</p>
 
         <h3 id="websites" class="rs-colour-text-highlight-shade">WEBSITES: Mid-Argyll Rugby Football Club</h3>
 
