Hid a couple of visual elements using NVDA

--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -100,7 +100,7 @@ jsFiles: []
                     {% include "../../website-source/_shared/images/balloon.svg" %}
                     <a href="/" class="rs-logo">
                         <span class="visually-hidden">Go to the home page.</span>{% include "../../website-source/_shared/images/logo/rising-sky-logo.svg" %}</a>
-                        <button class="rs-animation-cloud-control" data-playing>
+                        <button class="rs-animation-cloud-control" aria-hidden="true" data-playing>
                             <span class="visually-hidden rs-animation-pause">toggle cloud animation</span>
 
                             <svg data-pause xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentcolor" fill="none" stroke-linecap="round" stroke-linejoin="round">
