Force word wrap on footer for mobile

--- a/website-source/_shared/css/brand.css
+++ b/website-source/_shared/css/brand.css
@@ -844,6 +844,7 @@ pre[class*="language-"] {
 
 footer {
     border-block-end: 16px solid var(--rs-colour-bg-shade);
+    word-wrap: break-word;
 }
 
 footer>div:first-child {
