Added link to personal site and got rid of balloon as i hate it

--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -15,7 +15,7 @@ eleventyNavigation:
     <div class="rs-column-main">
       <h1>Human&#8209;friendly web things</h1>
   
-      <p>Hello, I'm Patrick Grey. Rising Sky is my one&#8209;person web development business. If you need an <a href="#elearning">e&#8209;learning course</a>, a <a href="#websites">website</a> or a new <a href="#ui">User Interface</a> for your application, <a href="contact/">contact me</a>, I can help. </p>
+      <p>Hello, I'm <a href="https://patrickgrey.co.uk" target="_blank">Patrick Grey</a>. Rising Sky is my one&#8209;person web development business. If you need an <a href="#elearning">e&#8209;learning course</a>, a <a href="#websites">website</a> or a new <a href="#ui">User Interface</a> for your application, <a href="contact/">contact me</a>, I can help. </p>
   
       <p>I have extensive experience customising the <a href="#imc">IMC Learning Management System</a> and can also provide <strong>advice</strong> on updating legacy websites and adopting new technology.</p>
   
