Added live website for MARFC

--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -63,10 +63,8 @@ eleventyNavigation:
           <img class="rs-project-example-hero" style="height:auto; aspect-ratio: 2843 / 1087 !important;" style="object-position: center top;" src="_shared/images/marfc-home.png" alt="A screenshot of the website homepage." sizes="(max-width: 600px) 600px, ((min-width: 601px) and (max-width: 999px)) 1000px">
         </div>
 
-        <p class="rs-colour-instruction">Unfortunately, due to an admin issue,  the site is currently down so I have linked to a backup site until resolved.</p>
 
-
-        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. <a href="https://marfc.netlify.app/" target="_blank">I built their website</a> for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
+        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. <a href="https://www.mid-argyll-rfc.org/" target="_blank">I built their website</a> for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
       </div>
 
       <div class="rs-sidebar">
