Updated prototype links and added api links

--- a/website-source/ectl/prototype-01/index.njk
+++ b/website-source/ectl/prototype-01/index.njk
@@ -1,5 +1,5 @@
 ---
-layout: prototypeBase.njk
+layout: base.njk
 tags: page
 title: "ECTL_SRC_250132 prototype launch page"
 jsFiles: ["./js/index.js"]
